unpackaged/main/default/objects/Phlebotomy__c/Phlebotomy__c.object-meta.xml
<CustomObject>
    <description>Nurse and Clinic Visits</description>
    <label>Phlebotomy</label>
    <nameField>
        <displayFormat>PHLB-{000000}</displayFormat>
        <label>Phlebotomy</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phlebotomy</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>