unpackaged/main/default/objects/Phlebotomy__c/fields/Blood_Test__c.field-meta.xml
<CustomField>
    <fullName>Blood_Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Required for Randox Tests only</inlineHelpText>
    <label>Blood Test</label>
    <referenceTo>Blood_Test__c</referenceTo>
    <relationshipLabel>Phlebotomy</relationshipLabel>
    <relationshipName>Phlebotomy</relationshipName>
    <type>Lookup</type>
</CustomField>