unpackaged/main/default/objects/Phlebotomy__c/fields/Booking_URL__c.field-meta.xml
<CustomField>
    <fullName>Booking_URL__c</fullName>
    <description>Goodbody Booking Link</description>
    <inlineHelpText>Goodbody Booking Link</inlineHelpText>
    <label>Booking URL</label>
    <type>Url</type>
</CustomField>