unpackaged/main/default/objects/Phlebotomy__c/fields/Goodbody_Confirmation_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Goodbody_Confirmation_DateTime__c</fullName>
    <label>Goodbody Confirmation DateTime</label>
    <type>DateTime</type>
</CustomField>