unpackaged/main/default/objects/Phlebotomy__c/fields/Goodbody_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Goodbody_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Goodbody Email Sent?</label>
    <type>Checkbox</type>
</CustomField>