unpackaged/main/default/objects/Phlebotomy__c/fields/Location_of_Blood_Draw__c.field-meta.xml
<CustomField>
    <fullName>Location_of_Blood_Draw__c</fullName>
    <description>Location of the Blood Draw - eg Superdrug Bristol / Patient&#39;s Home</description>
    <label>Location of Blood Draw</label>
    <type>TextArea</type>
</CustomField>