unpackaged/main/default/objects/Phlebotomy__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Phlebotomy</relationshipLabel>
    <relationshipName>Phlebotomy</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>