unpackaged/main/default/objects/Phlebotomy__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <label>Service Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Goodbody</fullName>
            </value>
            <value>
                <fullName>Randox</fullName>
            </value>
            <value>
                <fullName>Superdrug</fullName>
            </value>
            <value>
                <fullName>Trust MSS</fullName>
            </value>
            <value>
                <fullName>Graeme Dunn</fullName>
            </value>
            <value>
                <fullName>Nasreen Rehmani</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>