unpackaged/main/default/objects/Phlebotomy__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinic Visit</fullName>
            </value>
            <value>
                <fullName>Nurse Visit</fullName>
            </value>
            <value>
                <fullName>Therapeutic Venesection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>