unpackaged/main/default/objects/Phlebotomy__c/fields/Voucher__c.field-meta.xml
<CustomField>
    <fullName>Voucher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voucher</label>
    <referenceTo>Voucher__c</referenceTo>
    <relationshipLabel>Phlebotomy</relationshipLabel>
    <relationshipName>Phlebotomy</relationshipName>
    <type>Lookup</type>
</CustomField>