unpackaged/main/default/objects/Phlebotomy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Type__c</columns>
    <columns>Service_Provider__c</columns>
    <columns>Appointment_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>