unpackaged/main/default/objects/Phlebotomy__c/listViews/Randox.listView-meta.xml
<ListView>
    <fullName>Randox</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Type__c</columns>
    <columns>Service_Provider__c</columns>
    <columns>Voucher_Code__c</columns>
    <columns>Appointment_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Provider__c</field>
        <operation>equals</operation>
        <value>Randox</value>
    </filters>
    <label>Randox</label>
</ListView>