unpackaged/main/default/objects/Phlebotomy__c/listViews/Superdrug.listView-meta.xml
<ListView>
    <fullName>Superdrug</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Type__c</columns>
    <columns>Service_Provider__c</columns>
    <columns>Appointment_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Provider__c</field>
        <operation>equals</operation>
        <value>Superdrug</value>
    </filters>
    <label>Superdrug</label>
</ListView>